--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+<link rel="manifest" href="%PUBLIC_URL%/manifest.json?v=1.0.3" />
+
     
     <!-- ✅ Desactivar caché -->
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
